--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:8EzpFfPi9pKwTtClSiJuQrox25JTJ+NWao4AeEGlQtY=
 APP_DEBUG=true
 APP_URL=http://homebuilder.test:8000
 
+SETUP_PASS=davidpatt123
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
